# Deck-Crafter

./: .env_sample  .gitignore  PLAN_CONVERSATIONAL_EDITING.md  main.py  new_main.py  ollama_example.py  output.json  pyproject.toml  run_api.py  streamlit_app.py  structure.md  test.py
deck_crafter/: database.py  main.py
deck_crafter/agents/: card_agent.py  card_generation_agent.py  concept_agent.py  director_agent.py  evaluation_agents.py  feedback_agent.py  image_agent.py  orchestrator_agent.py  preferences_agent.py  rules_agent.py
deck_crafter/api/: __init__.py  main.py
deck_crafter/core/: llm_service.py
deck_crafter/game_simulator/: __init__.py  ai_agents.py  analysis_agent.py  cache.py  engine.py  game_state_manager.py  integration.py  llm_service.py  rule_compiler.py  simulation_engine.py  simulation_models.py  statistics.py  synthetic_games.py  test_real_game.py
deck_crafter/models/: __init__.py  card.py  card_type.py  chat.py  evaluation.py  game_concept.py  rules.py  state.py  user_preferences.py
deck_crafter/services/: llm_service.py  refinement_service.py
deck_crafter/utils/: config.py  logger.py
deck_crafter/workflow/: checkpointer.py  conditions.py  evaluation_workflow.py  (+4 more)
game_simulator/: __init__.py  ai_agents.py  analysis_agent.py  cache.py  engine.py  game_state_manager.py  generate_test_games.py  integration.py  rule_compiler.py  simulation_engine.py  statistics.py  synthetic_games.py  test_real_game.py
tests/: __init__.py  test_analysis_agent.py  test_analysis_validation.py  test_e2e_simulation.py  test_rule_compiler.py
(+16 files in other folders)
