[project]
name = "deck-crafter"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "gemini-api>=0.1.6",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-google-vertexai>=2.0.20",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.30",
    "langsmith>=0.3.31",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
